--- a/.github/workflows/deployment1.yaml
+++ b/.github/workflows/deployment1.yaml
@@ -4,7 +4,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Get code
+      - name: Get the code
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
